--- a/BackEnd/appsettings.json
+++ b/BackEnd/appsettings.json
@@ -17,7 +17,7 @@
   "Kestrel": {
     "Endpoints": {
       "Http": {
-        "Url": "http://localhost:5000"
+        "Url": "http://+:8080"
       }
     }
   }
